# brobot

./: LICENSE  pyproject.toml  readme.md
brobot/: console.py  weights.py
