[tool.poetry]
name = "BroBot"
version = "1.1.0"
description = "A workout helper."
license = "MIT"
authors = ["Jose Alarcon"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
brobot = 'brobot.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
